--- a/0x02-CSS_advanced/styles/4-style.css
+++ b/0x02-CSS_advanced/styles/4-style.css
@@ -4,9 +4,12 @@ html {
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
 }
-body, a {
+body {
     color: var(--text-color);
     font-family: var(--font-family-base);
+}
+a {
+    color: var(--text-color);
 }
 .visually-hidden {
     display: none;
