--- a/0x02-CSS_advanced/styles/16-style.css
+++ b/0x02-CSS_advanced/styles/16-style.css
@@ -196,7 +196,8 @@ html {
 
 .container {
     width: 960px;
-    margin: 0 auto;
+    margin-right: auto;
+    margin-left: auto; /* Evenly distribute margins on both sides */
 }
 
 /* Root Variables */
