--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -197,7 +197,7 @@ html {
     font-family: var(--font-family-title);
     font-size: var(--font-size-xx-large);
     font-weight: var(--font-weight-bold);
-    margin: var(--section-tagline-margin);
+    margin: var(--section-title-margin);
     color: var(--section-title-color);
 }
 
@@ -206,6 +206,7 @@ html {
     font-family: var(--font-family-title);
     text-transform: var(--section-tagline-transform);
     font-weight: var(--font-weight-bold);
+    margin: var(--section-tagline-margin);
 }
 
 .container {
